# flask-starter

./: .gitignore  1  README.md  README.rst  app.py  pyproject.toml  requirements.txt  script.py  server.py  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  python-app.yml
app/: __init__.py  extension.py  forms.py  models.py  views.py
app/templates/: home.html  layout.html  login.html  profile.html  register.html
templates/: Implinks.html  header.html  layout.html
tests/: conftest.py  test_app.py  test_models.py  test_views.py
