[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-starter"
version = "1.0.0"
description = "A flask extension which contains a basic app and is configured in your local machine through a command line utility"
readme = "README.rst"
authors = [
    { name = "Prince Roshan", email = "princekrroshan01@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-admin",
    "requests",
    "httplib2",
    "click",
    "rich",
]

[project.urls]
Homepage = "https://github.com/princekrroshan01/flask-starter"
Documentation = "https://github.com/princekrroshan01/flask-starter#readme"
Repository = "https://github.com/princekrroshan01/flask-starter.git"
Issues = "https://github.com/princekrroshan01/flask-starter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "tox>=4.0.0",
]

[project.scripts]
flask-starter-project = "script:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=app --cov-report=term-missing" 